--- a/src/Manassa/Manassa.csproj
+++ b/src/Manassa/Manassa.csproj
@@ -71,7 +71,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\BooleanToDataGridVisibilityModeConverter.cs" />
+    <Compile Include="Converters\BoolVisibilityConverter.cs" />
     <Compile Include="Converters\HasMSMSConverter.cs" />
+    <Compile Include="Converters\UriToBitmapConverter.cs" />
+    <Compile Include="Data\DatasetPlotLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Windows\DatasetInformationView.xaml.cs">
       <DependentUpon>DatasetInformationView.xaml</DependentUpon>
@@ -90,6 +93,9 @@
     </Compile>
     <Compile Include="Windows\MassTagControl.xaml.cs">
       <DependentUpon>MassTagControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\MsMsViewer.xaml.cs">
+      <DependentUpon>MsMsViewer.xaml</DependentUpon>
     </Compile>
     <Page Include="Windows\AnalysisView.xaml">
       <SubType>Designer</SubType>
@@ -145,6 +151,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Windows\MassTagControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\MsMsViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
