--- a/src/Manassa/Manassa.csproj
+++ b/src/Manassa/Manassa.csproj
@@ -75,7 +75,11 @@
     <Compile Include="Converters\HasMSMSConverter.cs" />
     <Compile Include="Converters\UriToBitmapConverter.cs" />
     <Compile Include="Data\DatasetPlotLoader.cs" />
+    <Compile Include="Data\RectangleFDependency.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Windows\ProteinGrid.xaml.cs">
+      <DependentUpon>ProteinGrid.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\DatasetInformationView.xaml.cs">
       <DependentUpon>DatasetInformationView.xaml</DependentUpon>
     </Compile>
@@ -91,8 +95,8 @@
     <Compile Include="Windows\MassTagGrid.xaml.cs">
       <DependentUpon>MassTagGrid.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\MassTagControl.xaml.cs">
-      <DependentUpon>MassTagControl.xaml</DependentUpon>
+    <Compile Include="Windows\MassTagViewer.xaml.cs">
+      <DependentUpon>MassTagViewer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\MsMsViewer.xaml.cs">
       <DependentUpon>MsMsViewer.xaml</DependentUpon>
@@ -108,6 +112,10 @@
     <Page Include="Windows\ClusterGrid.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ProteinGrid.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\DatasetInformationView.xaml">
       <SubType>Designer</SubType>
@@ -150,7 +158,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Windows\MassTagControl.xaml">
+    <Page Include="Windows\MassTagViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
