--- a/src/Manassa/Manassa.csproj
+++ b/src/Manassa/Manassa.csproj
@@ -87,6 +87,9 @@
     <Compile Include="Windows\MassTagControl.xaml.cs">
       <DependentUpon>MassTagControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\PerformAnalysisWindow.xaml.cs">
+      <DependentUpon>PerformAnalysisWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ProteinGrid.xaml.cs">
       <DependentUpon>ProteinGrid.xaml</DependentUpon>
     </Compile>
@@ -134,6 +137,10 @@
     <Page Include="Windows\MassTagControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\PerformAnalysisWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ProteinGrid.xaml">
       <Generator>MSBuild:Compile</Generator>
