--- a/src/Manassa/app.config
+++ b/src/Manassa/app.config
@@ -1,6 +1,24 @@
 <?xml version="1.0"?>
 <configuration>  
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Manassa.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
+  <userSettings>
+    <Manassa.Properties.Settings>
+      <setting name="DatasetFolderPath" serializeAs="String">
+        <value>m:\data\proteomics\MAPaper\data\</value>
+      </setting>
+      <setting name="SingleDatasetPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="InputFilePath" serializeAs="String">
+        <value />
+      </setting>
+    </Manassa.Properties.Settings>
+  </userSettings>
 </configuration>
