--- a/src/MultiAlignParameterFileEditor/MultiAlignParameterFileEditor.csproj
+++ b/src/MultiAlignParameterFileEditor/MultiAlignParameterFileEditor.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs">
