--- a/src/Manassa/app.config
+++ b/src/Manassa/app.config
@@ -2,6 +2,7 @@
 <configuration>  
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Manassa.Workspace" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="Manassa.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -9,6 +10,11 @@
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <userSettings>
+    <Manassa.Workspace>
+      <setting name="Setting" serializeAs="String">
+        <value />
+      </setting>
+    </Manassa.Workspace>
     <Manassa.Properties.Settings>
       <setting name="DatasetFolderPath" serializeAs="String">
         <value>m:\data\proteomics\MAPaper\data\</value>
@@ -18,6 +24,9 @@
       </setting>
       <setting name="InputFilePath" serializeAs="String">
         <value />
+      </setting>
+      <setting name="WorkspaceFile" serializeAs="String">
+        <value>manassaworkspace.xml</value>
       </setting>
     </Manassa.Properties.Settings>
   </userSettings>
